--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@
 /httpRequests/
 # Datasource local storage ignored files
 /dataSources/
-/dataSources.local.xml
-.env
+/.env
 
 .DS_Store
 .AppleDouble
